<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TempPassActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="357dp"
        android:layout_height="92dp"
        android:layout_marginTop="116dp"
        android:text="@string/we_have_sent_you_a_temporary_password_to_your_email_box"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_TempPassword"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/enter_your_temporary_password_here"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="203dp"
        android:layout_height="63dp"
        android:layout_marginBottom="132dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_TempPassword"
        app:layout_constraintVertical_bias="0.707" />

    <TextView
        android:id="@+id/warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Incorrect temporary password"
        android:visibility="invisible"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_TempPassword"
        app:layout_constraintVertical_bias="0.059" />

</androidx.constraintlayout.widget.ConstraintLayout>